update file paths

--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!--CSS Styles -->
-    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="src/assets/css/styles.css" />
 
     <!-- Favicons -->
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="assets/icons/apple-touch-icon.png"
+      href="src/assets/icons/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="assets/icons/favicon-32x32.png"
+      href="src/assets/icons/favicon-32x32.png"
     />
 
     <!-- Animate CSS CDN -->
@@ -37,7 +37,7 @@
         <li><a href="#about" class="nav-link">About</a></li>
         <li><a href="#skills" class="nav-link">Skills</a></li>
         <li><a href="#resume"  class="nav-link">Projects</a></li>
-        <li><a href="#resume" onClick="showResume('assets/docs/Miguel Tejeda Resume.pdf')" class="nav-link">Resume</a></li>
+        <li><a href="#resume" onClick="showResume('src/assets/docs/Miguel Tejeda Resume.pdf')" class="nav-link">Resume</a></li>
         <li><a href="#contact" class="nav-link">Contact</a></li>
       </ul>
 
@@ -55,7 +55,7 @@
     <!-- Hero Section -->
     <section class="hero" id="about">
       <img
-        src="assets/images/miguel-tejeda-hd.png"
+        src="src/assets/images/miguel-tejeda-hd.png"
         alt="miguel-tejeda"
         loading="lazy"
         class="hero-img"
@@ -111,32 +111,32 @@
       <div class="skills-wrapper">
         <div class="first-set animate__animated animate__pulse">
           <img
-            src="assets/icons/icons8-react-native.svg"
+            src="src/assets/icons/icons8-react-native.svg"
             alt="react"
             loading="lazy"
             class="icon icon-card"
           />
           <img
-            src="assets/icons/node-svgrepo-com.svg"
+            src="src/assets/icons/node-svgrepo-com.svg"
             alt="node"
             loading="lazy"
             class="icon icon-card"
           />
           <img
-            src="assets/icons/express-svgrepo-com.svg"
+            src="src/assets/icons/express-svgrepo-com.svg"
             alt="express"
             loading="lazy"
             class="icon icon-card"
           />
           <img
-            src="assets/icons/mongodb-icon-1.svg"
+            src="src/assets/icons/mongodb-icon-1.svg"
             alt="mongodb"
             loading="lazy"
             class="icon icon-card"
           />
           
           <img
-            src="assets/icons/icons8-javascript.svg"
+            src="src/assets/icons/icons8-javascript.svg"
             alt="js"
             loading="lazy"
             class="icon icon-card"
@@ -145,31 +145,31 @@
 
         <div class="second-set animate__animated animate__pulse">
            <img
-            src="assets/icons/jb-kotlin-svgrepo-com.svg"
+            src="src/assets/icons/jb-kotlin-svgrepo-com.svg"
             alt="kotlin"
             loading="lazy"
             class="icon icon-card"
           />
           <img
-            src="assets/icons/java-svgrepo-com.svg"
+            src="src/assets/icons/java-svgrepo-com.svg"
             alt="java"
             loading="lazy"
             class="icon icon-card"
           />
           <img
-          src="assets/icons/c.svg"
+          src="src/assets/icons/c.svg"
           alt="c++"
           loading="lazy"
           class="icon icon-card"
         />
         <img
-            src="assets/icons/python-svgrepo-com.svg"
+            src="src/assets/icons/python-svgrepo-com.svg"
             alt="python"
             loading="lazy"
             class="icon icon-card"
           />
           <img
-            src="assets/icons/icons8-git.svg"
+            src="src/assets/icons/icons8-git.svg"
             alt="git"
             loading="lazy"
             class="icon icon-card"
@@ -185,7 +185,7 @@
       <div class="projects-container">
         <div class="project-container project-card">
           <img
-            src="assets/images/SHPE-UF-walkthrough.gif"
+            src="src/assets/images/SHPE-UF-walkthrough.gif"
             alt="SHPE-UF"
             style="border-radius: 10%" 
             loading="lazy"
@@ -203,7 +203,7 @@
         </div>
         <div class="project-container project-card">
           <img
-            src="assets/images/NY-Articles-walkthrough.gif"
+            src="src/assets/images/NY-Articles-walkthrough.gif"
             alt="NY-Articles"
             style="border-radius: 10%" 
             loading="lazy"
@@ -222,7 +222,7 @@
       <div  class="projects-container">
         <div class="project-container project-card">
           <img
-            src="assets/images/langchain.png"
+            src="src/assets/images/langchain.png"
             alt="RAG"
             loading="lazy"
             class="project-pic"
@@ -239,7 +239,7 @@
         </div>
         <div class="project-container project-card">
           <img
-            src="assets/images/FBI.png"
+            src="src/assets/images/FBI.png"
             alt="FBI"
             style="border-radius: 10%" 
             loading="lazy"
@@ -256,7 +256,7 @@
 
         <div class="project-container project-card">
           <img
-            src="assets/images/VideoGameTracker.png"
+            src="src/assets/images/VideoGameTracker.png"
             alt="greeny-earth"
             loading="lazy"
             class="project-pic"
@@ -328,20 +328,20 @@
     <div class="socials">
       <a href="https://www.linkedin.com/in/miguel-tejeda-matos/" target="_blank"
         ><img
-          src="assets/icons/linkedin-icon.png"
+          src="src/assets/icons/linkedin-icon.png"
           alt="Linkedin"
           loading="lazy"
           class="socicon"
       /></a>
       <a href="https://github.com/Mtjay" target="_blank"
-        ><img src="assets/icons/github-logo.png" alt="Github" class="socicon"
+        ><img src="src/assets/icons/github-logo.png" alt="Github" class="socicon"
       /></a>
     </div>
 
     <!-- Scroll to top -->
     <i class="scroll-up" id="scroll-up"
       ><img
-        src="assets/icons/up-arrow.png"
+        src="src/assets/icons/up-arrow.png"
         class="socicon up-arrow"
         alt=""
     /></i>
@@ -355,7 +355,7 @@
     </footer>
 
     <!-- Website scripts -->
-    <script src="assets/js/app.js"></script>
+    <script src="src/assets/js/app.js"></script>
 
     <!-- Ion icons scripts -->
     <script
